View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023001 | Open CASCADE | OCCT:Visualization | public | 2012-02-21 15:54 | 2012-03-29 17:26 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Target Version | 6.5.3 | Fixed in Version | 6.5.3 | ||
Summary | 0023001: Mistake in OpenGl_FrameBuffer::IsValidDepthBuffer | ||||
Description | This issue is found in updated OpenGl_GraphicDriver. Invalid comparsion that leads to print error in std::cerr when destroying OpenGl_FrameBuffer. myGlTextureId != NO_RENDERBUFFER; myGlDepthRBId should be used instead | ||||
Steps To Reproduce | pload MODELING AISV vinit box b 10 10 10 vdisplay b vprintview 300 400 C:/test5.bmp Error message in console: OpenGl_FrameBuffer::Release() called with invalid OpenGl_Context! | ||||
Tags | No tags attached. | ||||
Test case number | chl 934 T6 | ||||
|
Dear Sergey, Could you please review the branch http://svn/svn/occt/branches/OCC23301 ? The error message was also reproduced in OpenGl_GraphicDriver::Print operation because the allocated frame buffer wasn't released correctly. |
|
Sorry, please check the branch http://svn/svn/occt/branches/OCC23001 |
|
The SVN branch reviewed without remarks, ready for testing. Dear bugmaster, Please, check that the test case chl 934 A9 verifies stderr contents! This issue is clearly a regression resulted from the test case ignoring stderr output of vprintview command. |
|
Also please check the test cases using vdump command, its stderr output should also be checked. |
|
Dear BugMaster, Workbench KAS:dev:mkv-23001-occt was created from SVN branch http://svn/svn/occt/branches/OCC23001 (and mkv-23001-products from trunk) and compiled on Linux platform. There are not regressions in mkv-23001-products regarding to KAS:dev:products-20120217-opt See results in /QADisk/occttests/results/KAS/dev/mkv-23001-products_21022012/lin See reference results in /QADisk/occttests/results/KAS/dev/products-20120217-opt_17022012/lin See test cases in /QADisk/occttests/tests/ED N.B. In order to launch testing case you can make use the following instructions http://doc/doku.php?id=occt:certification |
|
Reminder sent to: Dear APL, QA team experience some strange effects when testing your patch, could you please contact them and analyze the effects? I see one major difference from a normal working mode: they use "remote desktop" connection from one Windows station to another. |
2012-02-28 17:11 tester |
T6 (942 bytes) |
|
Dear BugMaster, Workbench KAS:dev:mkv-23001-occt was created from SVN branch http://svn/svn/occt/branches/OCC23001 and compiled on WNT platform. Test case for this bug is chl/934/T6. It is OK if we use local Windows station. It is KO if we use "remote desktop" connection from one Windows station to another. There are difference messages, for example: "Save to file operation failed. This operation may fail if you don't have enough available memory, then you can use smaller dimensions for the output file" |
|
Dear Bugmaster, The problems with remote desktop related to Microsoft GL context limitations for remote desktop connection. Printing operation fails due to unavailable GL "Frame buffer objects" extension. The similar issue and possible solutions clearly described in 0023003. For example, Mesa3D software implementation can be used. |
|
Dear BugMaster, SVN branch http://svn/svn/occt/branches/OCC23001 has been moved to GIT CR23001 one. |
|
Integrated into master |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-02-21 15:54 |
|
New Issue | |
2012-02-21 15:54 |
|
Assigned To | => apl |
2012-02-21 16:33 |
|
Status | new => assigned |
2012-02-21 16:35 |
|
Note Added: 0019700 | |
2012-02-21 16:35 |
|
Assigned To | apl => san |
2012-02-21 16:35 |
|
Status | assigned => resolved |
2012-02-21 16:53 |
|
Note Added: 0019702 | |
2012-02-21 17:12 |
|
Steps to Reproduce Updated | |
2012-02-21 17:15 |
|
Relationship added | related to 0022337 |
2012-02-21 17:17 |
|
Note Added: 0019704 | |
2012-02-21 17:17 |
|
Assigned To | san => bugmaster |
2012-02-21 17:17 |
|
Status | resolved => reviewed |
2012-02-21 17:18 |
|
Note Edited: 0019704 | |
2012-02-21 17:21 |
|
Note Added: 0019705 | |
2012-02-21 17:23 |
|
Assigned To | bugmaster => mkv |
2012-02-22 15:41 |
|
Note Added: 0019734 | |
2012-02-24 17:31 |
|
Note Added: 0019777 | |
2012-02-28 17:11 |
|
File Added: T6 | |
2012-02-28 17:11 |
|
Note Added: 0019807 | |
2012-02-28 17:12 |
|
Assigned To | mkv => apl |
2012-02-28 17:12 |
|
Status | reviewed => assigned |
2012-03-21 12:22 |
|
Relationship added | related to 0023015 |
2012-03-21 12:32 |
|
Note Added: 0020057 | |
2012-03-21 12:32 |
|
Status | assigned => resolved |
2012-03-21 12:32 |
|
Assigned To | apl => bugmaster |
2012-03-21 12:32 |
|
Status | resolved => reviewed |
2012-03-21 12:33 |
|
Relationship added | related to 0023003 |
2012-03-21 14:21 |
|
Assigned To | bugmaster => mkv |
2012-03-21 16:10 |
|
Note Added: 0020067 | |
2012-03-21 16:11 |
|
Test case number | => chl 934 T6 |
2012-03-21 16:11 |
|
Assigned To | mkv => bugmaster |
2012-03-21 16:11 |
|
Status | reviewed => tested |
2012-03-22 11:02 | bugmaster | Target Version | => 6.5.3 |
2012-03-22 11:05 | bugmaster | Note Added: 0020085 | |
2012-03-22 11:05 | bugmaster | Status | tested => verified |
2012-03-22 11:05 | bugmaster | Resolution | open => fixed |
2012-03-22 11:05 | bugmaster | Assigned To | bugmaster => apl |
2012-03-29 17:26 | bugmaster | Changeset attached | => occt master 96352003 |